--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,15 @@ name: My blog
 description: A jekyll theme
 
 # url is currently only used only for the RSS feed in feed.xml
-url: https://scotte.github.io/jekyll-clean
+#url: https://scotte.github.io/jekyll-clean
+url: https://monsterCCH.github.io
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: /jekyll-clean
+baseurl: ''
+  #/jekyll-clean
 
 # These can be '' to hide the Github or Gitlab nav buttons
 github: 'scotte/jekyll-clean'
