--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+title:              咸鱼的博客
+email:              996525605@qq.com
+description:        用文字记录发生 用心灵感受未来
 author:             Start Bootstrap
 baseurl:            ""
 url:                "https://monsterCCH.github.io"
