--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,19 +1,12 @@
 - name: Software Engineer Keywords
   keywords:
-      - Java
       - C++
-      - Python
+      - MYSQL
       - Design Patterns
+      - Algorithm
 
-- name: Mobile Developer Keywords
+- name: Linux Developer Keywords
   keywords:
-      - Android
-      - Reverse Engineering
-
-- name: Windows Developer Keywords
-  keywords:
-      - Win32 SDK
-      - DuiLib
-      - WTL
-      - COM
-      - WinDbg
+      - Operate System
+      - SHELL
+      - Kernel
