个人信息修改

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: https://monsterCCH.github.io
 date_format: "ordinal"
 title: CCH'S BLOG
-subtitle: "用文字记录发生，用心灵感受未来"
+subtitle: "Using Words Record Happen"
 description: "博客就是一个博客"
 keywords: Confessional, Life, Linux, Security, Essay, C++, Operating System
 timezone: Asia/Shanghai
